<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buttonLayout"
        style="?android:attr/buttonBarStyle"
        android:divider="?android:dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_label" />

        <Button
            android:id="@+id/help_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_label" />

        <Button
            android:id="@+id/ok_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok_label" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLayout"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:inputType="textCapWords"
                android:importantForAutofill="no" />

            <CheckBox
                android:id="@+id/do_not_modify_name_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_checkbox_label" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <DatePicker
                android:id="@+id/birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:id="@+id/longevityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longevity_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/longevity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longevity_hint"
                android:inputType="numberDecimal"
                android:importantForAutofill="no">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textViewDeathday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deathday_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <DatePicker
                android:id="@+id/deathday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timescale_label"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <Spinner
                    android:id="@+id/timescale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            <CheckBox
                android:id="@+id/reverse_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reverse_time_label" />

            <CheckBox
                android:id="@+id/show_msec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_msec_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/show_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_notifications_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_sound_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup android:id="@+id/notification_sound_radio_group">

                <RadioButton
                    android:id="@+id/no_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_sound_label" />

                <RadioButton
                    android:id="@+id/default_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_sound_label" />

                <RadioButton
                    android:id="@+id/mm_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mm_sound_label" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_exact_time_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/use_exact_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_exact_time_checkbox_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_frequency_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/update_frequency"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />



        </TableLayout>

    </ScrollView>
</RelativeLayout>
