<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background_rounded"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/update_button_label"
            android:padding="8dp"
            android:src="@drawable/selector" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/initial_label"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="0dp"
        android:padding="8dp" />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/loading_label"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

<!--    This field will be used for a real time clock-->
    <TextClock
        android:id="@+id/realTime"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="8dp"
        android:format12Hour="hh:mm:ss a"
        android:format24Hour="HH:mm:ss"
        android:textColor="@android:color/white"
        android:textSize="16sp" />



</LinearLayout>
